--- a/.github/workflows/deployapi.yml
+++ b/.github/workflows/deployapi.yml
@@ -11,6 +11,12 @@ env:
   ECS_API_SERVICE: ecs-api-service
   ECS_API_CLUSTER: pv-validation-hub-api-cluster               
   API_CONTAINER_NAME: pv-validation-hub-api-task
+  DJANGOSK: ${{ secrets.DJANGOSK }}
+  PGP: ${{ secrets.PGP }}
+  PGU: ${{ secrets.PGU }}
+  ADU: ${{ secrets.ADU }}
+  ADP: ${{ secrets.ADP }}
+  ADE: ${{ secrets.ADE }}
 
 jobs:
     deploy_api:
@@ -39,7 +45,17 @@ jobs:
               ECR_REPOSITORY: ${{ env.ECR_API_REPOSITORY }}
               IMAGE_TAG: latest
             run: |
-              docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+              docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG \
+              --build-arg ${{ env.DJANGOSK }} \
+              --build-arg ${{ env.PGP }} \
+              --build-arg ${{ env.PGU }} \
+              --build-arg ${{ env.ADU }} \
+              --build-arg ${{ env.ADP }} \
+              --build-arg ${{ env.ADE }} \
+              --build-arg region=${{ env.AWS_REGION }} \
+              --secret id=ak,${{ secrets.AWS_ACCESS_KEY }} \
+              --secret id=sak,${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+               -f Dockerfile.prod .
               docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
               echo "{image}={$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG}" >> $GITHUB_OUTPUT
     
