--- a/.github/workflows/deployfe.yml
+++ b/.github/workflows/deployfe.yml
@@ -36,6 +36,7 @@ jobs:
         run: |
           cd frontend
           npm install
+          cp ./.env.example .env
           npm run build
 
       - name: Move Build to tmp
