ahem, added cd to the dir with the file..
Signed-off-by: Duncan Ragsdale <88173870+Thistleman@users.noreply.github.com>

--- a/.github/workflows/deployapi.yml
+++ b/.github/workflows/deployapi.yml
@@ -43,6 +43,7 @@ jobs:
               ECR_REPOSITORY: ${{ env.ECR_API_REPOSITORY }}
               IMAGE_TAG: latest
             run: |
+              cd valhub
               docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG \
               --build-arg djangosk=${{ env.DJANGOSK }} \
               --build-arg admin_username=${{ env.ADU }} \
