--- a/valhub/Dockerfile.prod
+++ b/valhub/Dockerfile.prod
@@ -15,16 +15,16 @@ WORKDIR /root/.aws
 
 RUN --mount=type=secret,id=ak \
     --mount=type=secret,id=sak \
-    awk -v ak="$(cat /run/secrets/ak)" -v sak="$(cat /run/secrets/sak)" \
+    gawk -v ak="$(cat /run/secrets/ak)" -v sak="$(cat /run/secrets/sak)" \
     'BEGIN {print "[default]\naws_access_key_id = " ak "\naws_secret_access_key = " sak > "~/.aws/credentials"}'
 
-RUN awk -v region=region \
+RUN gawk -v region=region \
     'BEGIN {print "[default]\nregion = " region > "~/.aws/config"}'
 
 WORKDIR /root/.pem
 
 RUN --mount=type=secret,id=PEM \
-    awk -v pem="$(cat /run/secrets/PEM)" \
+    gawk -v pem="$(cat /run/secrets/PEM)" \
     'BEGIN {print pem > "~/.pem/private-key.pem"}' 
 
 RUN chmod 400 ~/.pem/private-key.pem
