--- a/.github/workflows/deployapi.yml
+++ b/.github/workflows/deployapi.yml
@@ -21,6 +21,8 @@ jobs:
         name: Deploy API
         runs-on: ubuntu-latest
         environment: production
+        outputs:
+          image: ${{ steps.build-image-api.outputs.image }}
         steps:
           - name: Checkout
             uses: actions/checkout@v3
