--- a/.github/workflows/deployapi.yml
+++ b/.github/workflows/deployapi.yml
@@ -50,8 +50,8 @@ jobs:
               --build-arg admin_password=${{ env.ADP }} \
               --build-arg admin_email=${{ env.ADE }} \
               --build-arg region=${{ env.AWS_REGION }} \
-              --secret id=ak,env=${{ secrets.AWS_ACCESS_KEY }} \
-              --secret id=sak,env=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+              --secret id=ak,env=${{ secrets.API_AK }} \
+              --secret id=sak,env=${{ secrets.API_SAK }} \
                -f Dockerfile.prod .
               docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
               echo "IMAGE=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
