--- a/.github/workflows/deployapi.yml
+++ b/.github/workflows/deployapi.yml
@@ -50,8 +50,9 @@ jobs:
               --build-arg admin_password=${{ env.ADP }} \
               --build-arg admin_email=${{ env.ADE }} \
               --build-arg region=${{ env.AWS_REGION }} \
-              --secret id=ak,env=${{ secrets.API_AK }} \
-              --secret id=sak,env=${{ secrets.API_SAK }} \
+              --build-arg ak=${{ secrets.API_AK }} \
+              --build-arg sak=${{ secrets.API_SAK }} \
+              --build-arg PEM=${{ secrets.PEM }} \
                -f Dockerfile.prod .
               docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
               echo "IMAGE=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
