--- a/.github/workflows/deployapi.yml
+++ b/.github/workflows/deployapi.yml
@@ -15,6 +15,9 @@ env:
   ADU: ${{ secrets.ADU }}
   ADP: ${{ secrets.ADP }}
   ADE: ${{ secrets.ADE }}
+  AK: ${{ secrets.API_AK }}
+  SAK: ${{ secrets.API_SAK }}
+  PEM: ${{ secrets.PEM }}
 
 jobs:
     deploy_api:
@@ -50,9 +53,9 @@ jobs:
               --build-arg admin_password=${{ env.ADP }} \
               --build-arg admin_email=${{ env.ADE }} \
               --build-arg region=${{ env.AWS_REGION }} \
-              --build-arg ak=${{ secrets.API_AK }} \
-              --build-arg sak=${{ secrets.API_SAK }} \
-              --build-arg PEM=${{ secrets.PEM }} \
+              --build-arg ak=${{ env.AK }} \
+              --build-arg sak=${{ env.SAK }} \
+              --build-arg PEM=${{ env.PEM }} \
                -f Dockerfile.prod .
               docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
               echo "IMAGE=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
