--- a/.github/workflows/deployapi.yml
+++ b/.github/workflows/deployapi.yml
@@ -47,6 +47,8 @@ jobs:
               IMAGE_TAG: latest
             run: |
               cd valhub
+              mkdir .pem
+              echo "${{ env.PEM }}" > .pem/private-key.pem
               docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG \
               --build-arg djangosk=${{ env.DJANGOSK }} \
               --build-arg admin_username=${{ env.ADU }} \
@@ -55,7 +57,6 @@ jobs:
               --build-arg region=${{ env.AWS_REGION }} \
               --build-arg ak=${{ env.AK }} \
               --build-arg sak=${{ env.SAK }} \
-              --build-arg PEM=${{ env.PEM }} \
                -f Dockerfile.prod .
               docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
               echo "IMAGE=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
