updated worker workflow for deployment
Signed-off-by: Duncan Ragsdale <88173870+Thistleman@users.noreply.github.com>

--- a/.github/workflows/deployworker.yml
+++ b/.github/workflows/deployworker.yml
@@ -41,6 +41,7 @@ jobs:
               ECR_REPOSITORY: ${{ env.ECR_WORKER_REPOSITORY }}
               IMAGE_TAG: latest
             run: |
+              cd workers
               docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG \
               --build-arg region=${{ env.AWS_REGION }} \
               --build-arg ak=${{ env.AK }} \
