--- a/ec2/requirements.txt
+++ b/ec2/requirements.txt
@@ -1,5 +1,5 @@
-numpy==1.22.0
-pandas==1.5.3
+numpy
+pandas
 boto3
 
 ########## add analytical task/evaluation script dependcies here to be pre-installed on the runner.
