--- a/valhub/supervisord.conf
+++ b/valhub/supervisord.conf
@@ -3,7 +3,7 @@ nodaemon = true
 
 [program:valhub_webserver]
 directory=/root/valhub
-command=python3 /root/valhub/manage.py runserver --noreload 0.0.0.0:8005
+command=python3 /root/valhub/manage.py runserver 0.0.0.0:8005
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
