--- a/.gitignore
+++ b/.gitignore
@@ -157,8 +157,8 @@ s3Emulator/pv-validation-hub-bucket/submission_files/*
 valhub/staticfiles
 valhub/media
 
-workers/tmp/*
-workers/current_evaluation/*
+workers/tmp
+workers/current_evaluation
 
 
 *.pid
