--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,10 @@ services:
       - type: bind
         source: ./ec2
         target: /root/admin
+      # aws credentials
+      - type: bind
+        source: ~/.aws
+        target: /root/.aws
 
   react-client:
     stdin_open: true
@@ -112,8 +116,12 @@ services:
       - s3
       - sqs
     volumes:
-      - ./workers:/root/worker
+      - ./workers/current_evaluation:/root/worker/current_evaluation
       - ./workers/tmp:/tmp
+      - ./workers/submission_worker.py:/root/worker/submission_worker.py
+      - ./workers/pvinsight-validation-runner.py:/root/worker/pvinsight-validation-runner.py
+      - ./workers/logs:/root/worker/logs
+    restart: always
 
 volumes:
   valhub:
