--- a/ec2/config.json
+++ b/ec2/config.json
@@ -1,5 +1,5 @@
 {
-    "category_name": "time_shifts",
+    "category_name": "Time Shift Analysis",
     "function_name": "detect_time_shifts",
     "comparison_type": "time_series",
     "performance_metrics": [
