--- a/workers/requirements.txt
+++ b/workers/requirements.txt
@@ -1,13 +1,6 @@
-matplotlib
-numpy
-pandas
-pvanalytics==0.1.3
-pvlib==0.9.4
-ruptures==1.1.7
-seaborn
-solar_data_tools
-scikit-learn
+requests
 boto3
-
-########## add analytical task/evaluation script dependcies here to be pre-installed on the runner.
-Requests==2.28.2
+pandas
+numpy
+seaborn
+matplotlib
