Update logging configuration and add logger module, In Progress improving worker

--- a/workers/logging_config.json
+++ b/workers/logging_config.json
@@ -32,10 +32,11 @@
         }
     },
     "loggers": {
-        "root": {
+        "": {
             "level": "DEBUG",
             "handlers": [
                 "stderr",
+                "stdout",
                 "file"
             ]
         }
