Update logging level and remove unnecessary code

--- a/workers/src/logging_config.json
+++ b/workers/src/logging_config.json
@@ -39,13 +39,13 @@
         },
         "file": {
             "class": "logging.handlers.RotatingFileHandler",
-            "level": "DEBUG",
+            "level": "INFO",
             "formatter": "detailed",
             "filename": "logs/submission.log"
         },
         "json_file": {
             "class": "logging.handlers.RotatingFileHandler",
-            "level": "DEBUG",
+            "level": "INFO",
             "formatter": "json",
             "filename": "logs/submission.log.jsonl"
         }
