--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@mui/x-data-grid": "^5.17.14",
     "apexcharts": "^3.36.3",
     "axios": "^1.2.0",
+    "markdown-to-jsx": "^7.4.5",
     "prop-types": "^15.8.1",
     "randomcolor": "^0.6.2",
     "react": "^18.2.0",
@@ -19,7 +20,6 @@
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.8",
     "react-frame-component": "^5.2.3",
-    "react-markdown": "^8.0.7",
     "react-modal": "^3.16.1",
     "react-router": "^6.22.1",
     "react-router-dom": "^6.4.2",
