fixed worker bugs from overhaul, implemented working new error report api route
Signed-off-by: Duncan Ragsdale <88173870+Thistleman@users.noreply.github.com>

--- a/workers/Dockerfile
+++ b/workers/Dockerfile
@@ -16,7 +16,7 @@ RUN apt-get update -qq
 RUN apt-get install -y libpq-dev python3-psycopg2 curl nano
 # RUN apt-get --assume-yes install python3-pip
 RUN apt-get --assume-yes install mariadb-client supervisor postgresql-client libopenblas-dev
-RUN apt-get --assume-yes install python3-dev default-libmysqlclient-dev build-essential cmake git
+RUN apt-get --assume-yes install python3-dev default-libmysqlclient-dev build-essential cmake git libhdf5-dev pkg-config
 WORKDIR /root
 WORKDIR /root/worker
 RUN python3 -m pip install --upgrade pip
