added quickfix to prod dockerfile
Signed-off-by: Duncan Ragsdale <88173870+Thistleman@users.noreply.github.com>

--- a/workers/Dockerfile.prod
+++ b/workers/Dockerfile.prod
@@ -12,6 +12,7 @@ ARG sak
 RUN mkdir -p .aws
 RUN mkdir worker
 
+
 WORKDIR /root/.aws
 
 RUN awk -v ak="${ak}" -v sak="${sak}" \
@@ -23,6 +24,8 @@ RUN awk -v region=${region} \
 WORKDIR /root/worker
 COPY . .
 
+RUN mkdir -p /root/worker/logs
+
 # Set environment variables for prod
 ENV PROD=true
 
@@ -33,8 +36,8 @@ EXPOSE 65535
 RUN apt-get update -qq
 RUN apt-get install -y libpq-dev python3-psycopg2
 # RUN apt-get --assume-yes install python3-pip
-RUN apt-get --assume-yes install mariadb-client supervisor postgresql-client
-RUN apt-get --assume-yes install python3-dev default-libmysqlclient-dev build-essential cmake libhdf5-dev
+RUN apt-get --assume-yes install mariadb-client supervisor postgresql-client libopenblas-dev
+RUN apt-get --assume-yes install python3-dev default-libmysqlclient-dev build-essential cmake git libhdf5-dev pkg-config
 RUN python3 -m pip install --upgrade pip
 WORKDIR /root/worker
 RUN python3 -m pip install -r requirements.txt
