--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,6 +111,7 @@ services:
       - .env
     ports:
       - "8500:8500"
+      - "8787:8787"
     depends_on:
       - api
       - s3
@@ -118,7 +119,7 @@ services:
     volumes:
       - ./workers/current_evaluation:/root/worker/current_evaluation
       - ./workers/logs:/root/worker/logs
-      - ./workers/tmp:/tmp
+      # - ./workers/tmp:/tmp
       - ./workers/requirements.txt:/root/worker/requirements.txt
       - ./workers/src:/root/worker/src
     restart: unless-stopped
