Added dask memory limits

--- a/workers/src/logging_config.json
+++ b/workers/src/logging_config.json
@@ -51,7 +51,8 @@
                 "stdout",
                 "file",
                 "json_file"
-            ]
+            ],
+            "propagate": false
         }
     }
 }
