integrated nextjs app, upgraded docker and added docker watch support, added support for some new models.
Signed-off-by: Duncan Ragsdale <88173870+Thistleman@users.noreply.github.com>

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,9 +2,8 @@ name: Update submodules
 
 on:
   push:
-    branches:
+    branches-ignore:
       - main
-      - develop
   workflow_dispatch:
 
 jobs:
