--- a/valhub/base/logging_config.json
+++ b/valhub/base/logging_config.json
@@ -28,7 +28,7 @@
         "stdout": {
             "class": "logging.StreamHandler",
             "level": "INFO",
-            "formatter": "simple",
+            "formatter": "detailed",
             "stream": "ext://sys.stdout"
         },
         "file": {
