--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,3 @@
-Django==3.2.16
-mysqlclient
-boto3
-requests
-djangorestframework
-django-cors-headers
-psycopg2
 black==24.2.0
 pre-commit
-flake8=7.0.0
+flake8==7.0.0
