--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -129,7 +129,12 @@ services:
       - ./workers/tmp:/tmp
       - ./workers/requirements.txt:/root/worker/requirements.txt
       - ./workers/src:/root/worker/src
-    restart: unless-stopped
+    restart: always
+    develop:
+      watch:
+        - action: sync
+          path: ./workers/src
+          target: /root/worker/src
 
 volumes:
   valhub:
