Updated the worker to handle submission over data files using docker env

--- a/workers/Dockerfile
+++ b/workers/Dockerfile
@@ -1,8 +1,5 @@
-FROM python:3.11-slim as base
+FROM python:3.11-slim
 
-# docker build --progress=plain -t "hmm:Dockerfile" -f valhub/Dockerfile .
-WORKDIR /root
-RUN mkdir worker
 WORKDIR /root/worker
 COPY . .
 
@@ -17,10 +14,7 @@ RUN apt-get install -y libpq-dev python3-psycopg2 curl nano
 # RUN apt-get --assume-yes install python3-pip
 RUN apt-get --assume-yes install mariadb-client supervisor postgresql-client libopenblas-dev
 RUN apt-get --assume-yes install python3-dev default-libmysqlclient-dev build-essential cmake git libhdf5-dev pkg-config
-WORKDIR /root
-WORKDIR /root/worker
 RUN python3 -m pip install --upgrade pip
-WORKDIR /root/worker
 RUN python3 -m pip install -r requirements.txt --timeout=1000
 
 CMD ["/bin/sh", "/root/worker/docker-entrypoint.sh"]
