Added performance metric generation from results back into pipeline

--- a/workers/src/logging_config.json
+++ b/workers/src/logging_config.json
@@ -33,13 +33,13 @@
         },
         "file": {
             "class": "logging.handlers.RotatingFileHandler",
-            "level": "INFO",
+            "level": "DEBUG",
             "formatter": "detailed",
             "filename": "logs/submission.log"
         },
         "json_file": {
             "class": "logging.handlers.RotatingFileHandler",
-            "level": "INFO",
+            "level": "DEBUG",
             "formatter": "json",
             "filename": "logs/submission.log.jsonl"
         }
