FE image adjustments and quick dev test
Signed-off-by: Duncan Ragsdale <88173870+Thistleman@users.noreply.github.com>

--- a/ec2/config.json
+++ b/ec2/config.json
@@ -1,5 +1,5 @@
 {
-    "category_name": "Time Shift Analysis",
+    "category_name": "Quick Dev TS",
     "function_name": "detect_time_shifts",
     "comparison_type": "time_series",
     "performance_metrics": [
