--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 djangosk=django-insecure-y&pp1if&0y)pxtmqf_@o1br(&-6mrxv**f5%&73d@d51kscvg!
 POSTGRES_PASSWORD=valhub
 POSTGRES_USER=valhub
+admin_username=admin
+admin_password=admin
+admin_email=admin@admin.com
+DOCKER_HOST_VOLUME_DATA_DIR="<path-to-repository>/<repo-name>/workers/current_evaluation/data"
+DOCKER_HOST_VOLUME_RESULTS_DIR="<path-to-repository>/<repo-name>/workers/current_evaluation/results"
