--- a/workers/src/docker/Dockerfile
+++ b/workers/src/docker/Dockerfile
@@ -1,5 +1,7 @@
+
+ARG python_version
 # Use an official Python runtime as the base image
-FROM python:3.11-slim
+FROM python:${python_version}-slim
 
 # Set the working directory in the container
 WORKDIR /app
