--- a/ec2/config.json
+++ b/ec2/config.json
@@ -1,11 +1,24 @@
 {
-  "category_name": "Quick Dev TS",
+  "category_name": "Time Shift Detection",
   "function_name": "detect_time_shifts",
   "comparison_type": "time_series",
+  "display_metrics": {
+    "mean_mean_absolute_error": "Mean Mean Absolute Error",
+    "median_mean_absolute_error": "Median Mean Absolute Error"
+  },
   "performance_metrics": [
     "runtime",
     "mean_absolute_error"
   ],
+  "metrics_operations": {
+    "mean_absolute_error": [
+      "mean",
+      "median"
+    ],
+    "runtime": [
+      "mean"
+    ]
+  },
   "allowable_kwargs": [
     "latitude",
     "longitude",
@@ -18,7 +31,7 @@
   "private_results_columns": [
     "system_id",
     "file_name",
-    "run_time",
+    "runtime",
     "data_requirements",
     "mean_absolute_error_time_series",
     "data_sampling_frequency",
