--- a/workers/Dockerfile.prod
+++ b/workers/Dockerfile.prod
@@ -50,4 +50,26 @@ RUN python3 -m pip install --upgrade pip
 WORKDIR /root/worker
 RUN python3 -m pip install -r requirements.txt
 
+RUN apt-get update -qq && \
+  apt-get install -y apt-transport-https \
+  ca-certificates \
+  curl \
+  gnupg2 \
+  software-properties-common \
+  && \
+  apt-get clean
+
+RUN apt-get update
+RUN apt-get install -y ca-certificates curl
+RUN install -m 0755 -d /etc/apt/keyrings
+RUN curl -fsSL https://download.docker.com/linux/debian/gpg -o /etc/apt/keyrings/docker.asc
+RUN chmod a+r /etc/apt/keyrings/docker.asc
+RUN echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/debian $(. /etc/os-release && echo "$VERSION_CODENAME") stable" > /etc/apt/sources.list.d/docker.list
+RUN apt-get update
+
+
+
+RUN apt install -y docker-ce git
+RUN apt-get clean
+
 CMD ["/bin/sh", "/root/worker/docker-entrypoint.sh"]
