Not properly adding env variables to docker image

--- a/workers/Dockerfile
+++ b/workers/Dockerfile
@@ -1,5 +1,8 @@
 FROM python:3.11-slim
 
+ARG DOCKER_HOST_VOLUME_DATA_DIR=${DOCKER_HOST_VOLUME_DATA_DIR}
+ARG DOCKER_HOST_VOLUME_RESULTS_DIR=${DOCKER_HOST_VOLUME_RESULTS_DIR}
+
 WORKDIR /root/worker
 COPY . .
 
