Didn't assign ARG to ENV within docker file

--- a/workers/Dockerfile
+++ b/workers/Dockerfile
@@ -8,6 +8,9 @@ COPY . .
 
 RUN mkdir -p /root/worker/logs
 
+ENV DOCKER_HOST_VOLUME_DATA_DIR=${DOCKER_HOST_VOLUME_DATA_DIR}
+ENV DOCKER_HOST_VOLUME_RESULTS_DIR=${DOCKER_HOST_VOLUME_RESULTS_DIR}
+
 ENV PORT 8500
 EXPOSE 8500
 EXPOSE 65535
