--- a/workers/Dockerfile.prod
+++ b/workers/Dockerfile.prod
@@ -49,7 +49,7 @@ RUN apt-get --assume-yes install python3-dev default-libmysqlclient-dev build-es
 
 # Setup virtual environment
 RUN python3 -m venv .venv
-RUN source .venv/bin/activate
+RUN . .venv/bin/activate
 
 # Install dependencies
 RUN python3 -m pip install --upgrade pip
